# NR_L1_simu

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PY3GPP_DMRS_BUG_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_ldpc.py
configs/: minimal_pusch_awgn.yaml  pdsch_awgn.json  pdsch_awgn.yaml  pusch_awgn.yaml  pusch_awgn_harq.yaml  pusch_awgn_multi_tti.yaml  pusch_awgn_with_interference.yaml  pusch_cdl.yaml  pusch_curve_awgn.yaml  pusch_dfts_awgn.yaml  pusch_external_freqresp_fd.yaml  pusch_replay_template.yaml  pusch_tdl.yaml  pusch_tdl_c.yaml  pusch_tdl_c_explicit_paths.yaml
configs/baseline/: pusch_cp_ofdm_qam256_mcs0_awgn_snr0.yaml  pusch_cp_ofdm_qam256_mcs27_awgn_snr50.yaml  pusch_dfts_ofdm_qam256_mcs0_awgn_snr0.yaml  pusch_dfts_ofdm_qam256_mcs27_awgn_snr50.yaml
configs/channels/: awgn.yaml  cdl_a.yaml  cdl_b.yaml  cdl_c.yaml  cdl_d.yaml  cdl_e.yaml  tdl_a.yaml  tdl_b.yaml  tdl_c.yaml  tdl_d.yaml  tdl_e.yaml
configs/interferers/: pusch_interferer_awgn.yaml  pusch_interferer_tdl_c.yaml
docs/: custom_intermediate_plotting.md  custom_link_development.md  performance.md  plotting_development.md  project_review_2026-07-13.md  py3gpp_issue_sionna_encoder_bg2_k640.md  py3gpp_issue_thangaraj_fallback_bg2_k640.md  py3gpp_pr_sionna_bg2_k640.md  review_closure_2026-07-12.md  review_closure_2026-07-13.md  system_design.md  troubleshooting.md
examples/: run_from_config.py  run_link_curve.py  run_pdsch_awgn.py  run_pusch_awgn.py  run_pusch_dfts_awgn.py
inputs/: frequency_response_typical_24rb.txt  mimo_frequency_response_24rb_2rx2tx.txt  mimo_time_domain_taps_2rx2tx_8tap.txt  pusch_capture.txt
scripts/: setup_windows.bat  setup_windows.ps1
src/nr_phy_simu/: __init__.py  config.py  visualization.py
src/nr_phy_simu/channels/: __init__.py  awgn.py  cdl.py  channel_factory.py  external_frequency_response.py  fading_base.py  profile_tables.py  tdl.py
src/nr_phy_simu/common/: __init__.py  bwp.py  harq.py  interfaces.py  layer_mapping.py  mcs.py  ofdm.py  resource_grid.py  runtime_context.py  torch_utils.py  transmission.py  types.py  ulsch_ldpc.py
src/nr_phy_simu/io/: __init__.py  _complex_text.py  config_loader.py  (+3 more)
tests/: test_platform_review.py  test_smoke.py
(+28 files in other folders)
