[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-phy-simu"
version = "0.1.0"
description = "A modular Python project for NR PHY simulation."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "py3gpp>=0.6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
