[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nr-phy-simu"
version = "0.1.0"
description = "A modular Python project for NR PHY simulation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "NR L1 Simu contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.13",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "py3gpp>=0.6.0,<0.7",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Repository = "https://github.com/ThereWasAYang/NR_L1_simu"
Issues = "https://github.com/ThereWasAYang/NR_L1_simu/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "slow: full baseline or performance-sensitive regression tests",
]
